# DND-schedule-prod

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTINUE_PROJECT_PROMPT.md  Makefile  README.md  ROADMAP.md  SETUP_INSTRUCTIONS.md  activate_env.sh  coverage.xml  pyproject.toml  test_infrastructure.py  test_phase3_cli.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/backups/: schedule_2025_10_backup_20251025_212004.json
docs/: api.md  architecture.md  contributing.md
docs/bugfixes/: ALL_FIXES_APPLIED.md  BUGFIX2_SUMMARY.md  BUGFIX3_SUMMARY.md  BUGFIX4_FINAL.md  BUGFIX6_EXPORT.md  BUGFIX_SUMMARY.md  BUG_FIX_IMPORT.md
docs/guides/: COMMIT_GUIDE.md  DEBUG_GUIDE.md  GIT_HOOKS_GUIDE.md
docs/phases/: PHASE1_COMPLETE.md  PHASE1_VERIFICATION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE_SUMMARY.md  PHASE4_COVERAGE_PROGRESS.md  PHASE4_FINAL_REPORT.md  PHASE4_PROGRESS.md  PHASE4_PROMPT.md  PHASE4_QUICK_START.md
docs/reports/: FINAL_COMPLETE.md  PROJECT_STATUS.md  SESSION_SUMMARY.md
docs/testing/: FIX_TESTS.md  NEXT_STEPS.md  RUN_TESTS_NOW.md
scripts/: README.md  check_phase1.py  copy_config_files.sh  lint.sh  setup.sh  setup_project_structure.py  test.sh
src/schedule_dnd/: __init__.py  __main__.py
src/schedule_dnd/application/: __init__.py  dto.py
src/schedule_dnd/application/services/: __init__.py  export_service.py  schedule_service.py
src/schedule_dnd/domain/: __init__.py  constants.py  enums.py  exceptions.py  models.py  validators.py
src/schedule_dnd/infrastructure/: __init__.py  logging.py
src/schedule_dnd/infrastructure/config/: __init__.py  settings.py
src/schedule_dnd/infrastructure/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  factory.py  html_exporter.py  json_exporter.py  markdown_exporter.py
src/schedule_dnd/infrastructure/repositories/: __init__.py  base.py  json_repository.py
src/schedule_dnd/presentation/: __init__.py
src/schedule_dnd/presentation/cli/: __init__.py  app.py  formatters.py
src/schedule_dnd/presentation/cli/commands/: __init__.py  base.py  create.py  export.py  load.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/application/: test_export_service.py  test_schedule_service.py
tests/unit/domain/: test_enums.py  test_models.py  test_validators.py  test_validators_extended.py
tests/unit/infrastructure/: test_exporters.py  test_repositories.py
tests/unit/presentation/: test_cli.py
